[gd_scene load_steps=6 format=3 uid="uid://ccvvwbcptp2a6"]

[ext_resource type="PackedScene" uid="uid://cvok510p82m5y" path="res://scenes/player/player.tscn" id="1_dv7lv"]
[ext_resource type="Script" path="res://scenes/levels/test_arena/test_arena.gd" id="1_ryifq"]
[ext_resource type="PackedScene" uid="uid://hey2wphj6kdt" path="res://scenes/timer/timer.tscn" id="2_v4ema"]
[ext_resource type="PackedScene" uid="uid://dce4osgytdv5x" path="res://scenes/victory_screen/victory_screen.tscn" id="3_kljvt"]
[ext_resource type="PackedScene" uid="uid://dv6rmtrh3dsyo" path="res://scenes/tools/scene_switcher/scene_switcher.tscn" id="5_ee6qe"]

[node name="TestArena" type="Node2D"]
script = ExtResource("1_ryifq")

[node name="Player1" parent="." instance=ExtResource("1_dv7lv")]
position = Vector2(-349, 0)
it = true

[node name="Player2" parent="." instance=ExtResource("1_dv7lv")]
position = Vector2(274, 0)
left = "arrow_L"
right = "arrow_R"
up = "arrow_U"
down = "arrow_D"

[node name="TimerContainer" parent="." instance=ExtResource("2_v4ema")]
position = Vector2(2, -324)
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -437.0
offset_top = -174.0
offset_right = -223.0
offset_bottom = -59.0
text = "Player 1:
W- Up
A- Left
S- Down
D- Right"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 185.0
offset_top = -174.0
offset_right = 378.0
offset_bottom = -59.0
text = "Player 2:
Arrow Key Up- Up
Arrow Key Left- Left
Arrow Key Down- Down
Arrow Key Right- Right"
fit_content = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = -139.0
offset_top = 197.0
offset_right = 115.0
offset_bottom = 396.0
text = "DIRECTIONS:
Tag the other player and have fun, if you don't have fun you have lost you don't wanna lose right? "
fit_content = true
scroll_active = false

[node name="VictoryScreen" parent="." instance=ExtResource("3_kljvt")]
visible = false
offset_left = 14.0
offset_top = 17.0
offset_right = 14.0
offset_bottom = 17.0

[node name="SceneSwitcher" parent="." instance=ExtResource("5_ee6qe")]
